--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "wuxiangang <wuxiangang@bitboolean.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "node build/dev-server.js",
     "start": "npm run dev",
     "dll": "webpack --config ./build/webpack.dll.config.js",
     "pro": "npm run dll && npm run build",
@@ -39,11 +39,15 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.19.1",
     "node-notifier": "^5.1.2",
+    "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -60,7 +64,8 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.10.0",
+    "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
